methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:5: error: '(' expected but identifier found.
    if getCouleurSol() == Color.green {
       ^SlugTracking:9: error: illegal start of simple expression
  } else {
  ^